Incorporate changes from testcontainers-java fork
This repo is intended as the primary source of truth for now.